--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,110 +2,80 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
   pull_request:
-    branches: [main]
+    branches: [ "main" ]
 
 jobs:
-  version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.version }}
-    steps:
-      - uses: actions/checkout@v3
-      - id: get_version
-        name: Get version
-        run: |
-          VERSION="0.1.0"
-          COMMIT=$(git rev-parse --short HEAD || echo "unknown")
-          VERSION_STRING="$VERSION-$COMMIT"
-          echo "version=$VERSION_STRING" >> $GITHUB_OUTPUT
-
   build:
-    needs: version
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+        include:
+          - os: ubuntu-latest
+            dependencies: >
+              build-essential
+              libreadline-dev
+              libssl-dev
+              libmbedtls-dev
+              libargon2-dev
+              pkg-config
+          - os: macos-latest
+            dependencies: >
+              readline
+              openssl
+              mbedtls
+              argon2
+          - os: windows-latest
+            dependencies: >
+              mingw-w64
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Install Dependencies (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential cmake gcc g++ \
-            libssl-dev libreadline-dev libncurses5-dev \
-            ninja-build libmbedtls-dev libargon2-dev
+    - name: Install Dependencies (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ${{ matrix.dependencies }}
 
-      - name: Install Dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install cmake ninja openssl@3 readline ncurses argon2 mbedtls
+    - name: Install Dependencies (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install ${{ matrix.dependencies }}
 
-      - name: Install Dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          vcpkg install mbedtls:x64-windows argon2:x64-windows
-          echo "CMAKE_TOOLCHAIN_FILE=$env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake" >> $env:GITHUB_ENV
+    - name: Install Dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
+        update: true
+        install: >-
+          ${{ matrix.dependencies }}
+          mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-mbedtls
+          mingw-w64-x86_64-argon2
 
-      - name: Configure CMake (Linux/Windows)
-        if: runner.os != 'macOS'
-        run: |
-          cmake -B build -S . \
-            -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DVERSION=${{needs.version.outputs.version}}
+    - name: Configure CMake (Unix)
+      if: matrix.os != 'windows-latest'
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=Release
 
-      - name: Configure CMake (macOS Universal)
-        if: runner.os == 'macOS'
-        run: |
-          cmake -B build-x86_64 -S . \
-            -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_OSX_ARCHITECTURES=x86_64 \
-            -DVERSION=${{needs.version.outputs.version}} \
-            -DUSE_BREW_LIBS=ON
+    - name: Configure CMake (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: msys2 {0}
+      run: |
+        cmake -B build -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
 
-          cmake -B build-arm64 -S . \
-            -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_OSX_ARCHITECTURES=arm64 \
-            -DVERSION=${{needs.version.outputs.version}} \
-            -DUSE_BREW_LIBS=ON
+    - name: Build
+      run: cmake --build build
 
-      - name: Build (Unix/Windows)
-        if: runner.os != 'macOS'
-        run: cmake --build build --config Release
-
-      - name: Build (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          cmake --build build-x86_64
-          cmake --build build-arm64
-          mkdir -p build/Release
-          lipo -create \
-            build-x86_64/nosh \
-            build-arm64/nosh \
-            -output build/Release/nosh
-
-      - name: Upload Artifacts (Linux)
-        if: runner.os == 'Linux'
-        uses: actions/upload-artifact@v4
-        with:
-          name: nosh-linux
-          path: build/nosh
-
-      - name: Upload Artifacts (macOS)
-        if: runner.os == 'macOS'
-        uses: actions/upload-artifact@v4
-        with:
-          name: nosh-macos
-          path: build/Release/nosh
-
-      - name: Upload Artifacts (Windows)
-        if: runner.os == 'Windows'
-        uses: actions/upload-artifact@v4
-        with:
-          name: nosh-windows
-          path: build/Release/nosh.exe
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: nosh-${{ matrix.os }}
+        path: |
+          build/nosh
+          build/nosh.exe
