--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -72,8 +72,7 @@ jobs:
     - name: Build
       run: cmake --build build
 
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: nosh-${{ matrix.os }}
         path: |
