--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,7 +44,10 @@ jobs:
     - name: Install Dependencies (macOS)
       if: matrix.os == 'macos-latest'
       run: |
-        brew install ${{ matrix.dependencies }}
+        brew install readline openssl mbedtls argon2 pkg-config
+        echo "MBEDTLS_PREFIX=$(brew --prefix mbedtls)" >> $GITHUB_ENV
+        echo "ARGON2_PREFIX=$(brew --prefix argon2)" >> $GITHUB_ENV
+        echo "HOMEBREW_PREFIX=$(brew --prefix)" >> $GITHUB_ENV
 
     - name: Install Dependencies (Windows)
       if: matrix.os == 'windows-latest'
@@ -61,7 +64,9 @@ jobs:
     - name: Configure CMake (Unix)
       if: matrix.os != 'windows-latest'
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_PREFIX_PATH="$MBEDTLS_PREFIX;$ARGON2_PREFIX" \
+          -DOPENSSL_ROOT_DIR=$(brew --prefix openssl)
 
     - name: Configure CMake (Windows)
       if: matrix.os == 'windows-latest'
