--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -48,6 +48,8 @@ jobs:
         echo "MBEDTLS_PREFIX=$(brew --prefix mbedtls)" >> $GITHUB_ENV
         echo "ARGON2_PREFIX=$(brew --prefix argon2)" >> $GITHUB_ENV
         echo "HOMEBREW_PREFIX=$(brew --prefix)" >> $GITHUB_ENV
+        # Add pkg-config path for mbedtls
+        echo "PKG_CONFIG_PATH=$(brew --prefix mbedtls)/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
     - name: Install Dependencies (Windows)
       if: matrix.os == 'windows-latest'
@@ -68,9 +70,9 @@ jobs:
           cmake -B build -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_PREFIX_PATH="$MBEDTLS_PREFIX;$ARGON2_PREFIX" \
             -DOPENSSL_ROOT_DIR=$(brew --prefix openssl) \
-            -DCMAKE_LIBRARY_PATH="$(brew --prefix mbedtls)/lib;$(brew --prefix argon2)/lib" \
-            -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON \
-            -DCMAKE_INSTALL_RPATH="@loader_path/../lib"
+            -DCMAKE_FIND_FRAMEWORK=LAST \
+            -DCMAKE_INSTALL_NAME_DIR=@executable_path/../lib \
+            -DCMAKE_BUILD_WITH_INSTALL_NAME_DIR=ON
         else
           cmake -B build -DCMAKE_BUILD_TYPE=Release
         fi
