--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -60,8 +60,9 @@ jobs:
         msystem: MINGW64
         update: true
         install: >-
-          ${{ matrix.dependencies }}
+          mingw-w64-x86_64-gcc
           mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-make
           mingw-w64-x86_64-mbedtls
           mingw-w64-x86_64-argon2
 
