--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -65,6 +65,8 @@ jobs:
           mingw-w64-x86_64-make
           mingw-w64-x86_64-mbedtls
           mingw-w64-x86_64-argon2
+          mingw-w64-x86_64-pkgconf
+          mingw-w64-x86_64-readline
 
     - name: Configure CMake (Unix)
       if: matrix.os != 'windows-latest'
@@ -86,10 +88,16 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
       run: |
-        cmake -B build -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -G "MinGW Makefiles" \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
+          -DCMAKE_MAKE_PROGRAM=/mingw64/bin/mingw32-make.exe
 
     - name: Build
-      run: cmake --build build
+      if: matrix.os == 'windows-latest'
+      shell: msys2 {0}
+      run: |
+        cmake --build build
 
     - uses: actions/upload-artifact@v4
       with:
