--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -93,7 +93,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
           -DCMAKE_MAKE_PROGRAM=/mingw64/bin/mingw32-make.exe \
-          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32"
+          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DGLOB_TILDE=0x0800"
 
     - name: Build
       if: matrix.os == 'windows-latest'
