--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -93,13 +93,16 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
           -DCMAKE_MAKE_PROGRAM=/mingw64/bin/mingw32-make.exe \
-          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32"
+          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DWIN32_LEAN_AND_MEAN" \
+          -DCMAKE_PREFIX_PATH=/mingw64 \
+          -DCMAKE_LIBRARY_PATH=/mingw64/lib \
+          -DCMAKE_INCLUDE_PATH=/mingw64/include
 
     - name: Build
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
       run: |
-        cd build && mingw32-make
+        cd build && mingw32-make VERBOSE=1
 
     - uses: actions/upload-artifact@v4
       with:
