--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -93,7 +93,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
           -DCMAKE_MAKE_PROGRAM=/mingw64/bin/mingw32-make.exe \
-          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DWIN32_LEAN_AND_MEAN -DGLOB_INTERNAL" \
+          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DWIN32_LEAN_AND_MEAN -DGLOB_INTERNAL -I${MSYS2_PREFIX}/include" \
           -DCMAKE_PREFIX_PATH=/mingw64 \
           -DCMAKE_LIBRARY_PATH=/mingw64/lib \
           -DCMAKE_INCLUDE_PATH=/mingw64/include
