--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -68,6 +68,8 @@ jobs:
           mingw-w64-x86_64-pkgconf
           mingw-w64-x86_64-readline
           mingw-w64-x86_64-windows-default-manifest
+          mingw-w64-x86_64-ncurses
+          mingw-w64-x86_64-pdcurses
 
     - name: Configure CMake (Unix)
       if: matrix.os != 'windows-latest'
@@ -98,7 +100,7 @@ jobs:
           -DCMAKE_LIBRARY_PATH=/mingw64/lib \
           -DCMAKE_INCLUDE_PATH="/mingw64/include;/mingw64/include/readline" \
           -DREADLINE_ROOT=/mingw64 \
-          -DCMAKE_EXE_LINKER_FLAGS="-lwsock32 -lws2_32 -liphlpapi -lbcrypt -lncurses -ltinfo -Wl,--start-group,-Bstatic -lmbedtls -lmbedcrypto -lmbedx509 -largon2 -Wl,--end-group"
+          -DCMAKE_EXE_LINKER_FLAGS="-lwsock32 -lws2_32 -liphlpapi -lbcrypt -lpdcurses -Wl,--start-group,-Bstatic -lmbedtls -lmbedcrypto -lmbedx509 -largon2 -Wl,--end-group"
 
     - name: Build
       if: matrix.os == 'windows-latest'
