--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -95,12 +95,12 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_C_COMPILER=/mingw64/bin/gcc.exe \
           -DCMAKE_MAKE_PROGRAM=/mingw64/bin/mingw32-make.exe \
-          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DWIN32_LEAN_AND_MEAN -DGLOB_INTERNAL -I/mingw64/include" \
+          -DCMAKE_C_FLAGS="-D_GNU_SOURCE -D_WIN32 -DWIN32_LEAN_AND_MEAN" \
           -DCMAKE_PREFIX_PATH=/mingw64 \
           -DCMAKE_LIBRARY_PATH=/mingw64/lib \
           -DCMAKE_INCLUDE_PATH="/mingw64/include;/mingw64/include/readline" \
           -DREADLINE_ROOT=/mingw64 \
-          -DCMAKE_EXE_LINKER_FLAGS="-lwsock32 -lws2_32 -liphlpapi -lbcrypt -lpdcurses -Wl,--start-group,-Bstatic -lmbedtls -lmbedcrypto -lmbedx509 -largon2 -Wl,--end-group"
+          -DCMAKE_EXE_LINKER_FLAGS="-static-libgcc -static-libstdc++ -Wl,-Bstatic -lpdcurses -lreadline -lmbedtls -lmbedcrypto -lmbedx509 -largon2 -Wl,-Bdynamic -lws2_32 -liphlpapi -lbcrypt"
 
     - name: Build
       if: matrix.os == 'windows-latest'
