--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -72,6 +72,7 @@ jobs:
           mingw-w64-x86_64-windows-default-manifest
           mingw-w64-x86_64-ncurses
           mingw-w64-x86_64-pdcurses
+          git
 
     - name: Configure Git (Windows)
       if: matrix.os == 'windows-latest'
