--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [x64, arm64]
+        exclude:
+          - os: windows-latest
+            arch: arm64
+          - os: ubuntu-latest
+            arch: arm64
         include:
           - os: ubuntu-latest
+            arch: x64
             dependencies: >
               build-essential
               libreadline-dev
@@ -23,12 +30,21 @@ jobs:
               libargon2-dev
               pkg-config
           - os: macos-latest
+            arch: x64
+            dependencies: >
+              readline
+              openssl
+              mbedtls
+              argon2
+          - os: macos-latest
+            arch: arm64
             dependencies: >
               readline
               openssl
               mbedtls
               argon2
           - os: windows-latest
+            arch: x64
             dependencies: >
               mingw-w64
 
@@ -91,7 +107,8 @@ jobs:
             -DCMAKE_INSTALL_NAME_DIR=@executable_path/../lib \
             -DCMAKE_BUILD_WITH_INSTALL_NAME_DIR=ON \
             -DCMAKE_LIBRARY_PATH="$(brew --prefix mbedtls)/lib;$(brew --prefix argon2)/lib" \
-            -DCMAKE_INCLUDE_PATH="$(brew --prefix mbedtls)/include;$(brew --prefix argon2)/include"
+            -DCMAKE_INCLUDE_PATH="$(brew --prefix mbedtls)/include;$(brew --prefix argon2)/include" \
+            -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch == 'arm64' && 'arm64' || 'x86_64' }}
         else
           cmake -B build -DCMAKE_BUILD_TYPE=Release
         fi 
@@ -138,7 +155,7 @@ jobs:
     # Keep existing artifact upload
     - uses: actions/upload-artifact@v4
       with:
-        name: nosh-${{ matrix.os }}
+        name: nosh-${{ matrix.os }}-${{ matrix.arch }}
         path: |
           build/nosh
           build/nosh.exe
