--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -67,21 +67,25 @@ jobs:
           softwareupdate --install-rosetta --agree-to-license
         fi
         
-        # Install Homebrew if not present
-        if [ ! -f "/usr/local/bin/brew" ] && [ "${{ matrix.arch }}" = "x64" ]; then
-          cd /tmp
-          mkdir homebrew && curl -L https://github.com/Homebrew/brew/tarball/master | tar xz --strip 1 -C homebrew
-          sudo mkdir -p /usr/local/Homebrew /usr/local/var
-          sudo mv homebrew/* /usr/local/Homebrew/
-          sudo ln -sf /usr/local/Homebrew/bin/brew /usr/local/bin/brew
-          sudo chown -R $(whoami) /usr/local/Homebrew /usr/local/var
-          sudo chmod -R 755 /usr/local/var
-        fi
-        
-        # Set Homebrew prefix based on architecture
+        # Create and set permissions for Homebrew directories
         if [ "${{ matrix.arch }}" = "x64" ]; then
+          sudo mkdir -p /usr/local/opt /usr/local/share/man/man1
+          sudo chown -R $(whoami) /usr/local/opt /usr/local/share
+          sudo chmod u+w /usr/local/opt /usr/local/share/man/man1
+          
+          # Install Homebrew if not present
+          if [ ! -f "/usr/local/bin/brew" ]; then
+            cd /tmp
+            mkdir homebrew && curl -L https://github.com/Homebrew/brew/tarball/master | tar xz --strip 1 -C homebrew
+            sudo mkdir -p /usr/local/Homebrew
+            sudo mv homebrew/* /usr/local/Homebrew/
+            sudo ln -sf /usr/local/Homebrew/bin/brew /usr/local/bin/brew
+            sudo chown -R $(whoami) /usr/local/Homebrew
+          fi
+          
           HOMEBREW_PREFIX="/usr/local"
           echo "HOMEBREW_PREFIX=/usr/local" >> $GITHUB_ENV
+          
           # Install x86_64 versions of dependencies
           if [ "$(uname -m)" = "arm64" ]; then
             arch -x86_64 /usr/local/bin/brew install readline openssl mbedtls argon2 pkg-config
