--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -67,11 +67,11 @@ jobs:
           softwareupdate --install-rosetta --agree-to-license
         fi
         
-        # Create and set permissions for Homebrew directories
+        # Create and set permissions for ALL Homebrew directories
         if [ "${{ matrix.arch }}" = "x64" ]; then
-          sudo mkdir -p /usr/local/{opt,share/man/man1,var/homebrew,Cellar}
-          sudo chown -R $(whoami) /usr/local/opt /usr/local/share /usr/local/var /usr/local/Cellar
-          sudo chmod -R u+w /usr/local/opt /usr/local/share /usr/local/var /usr/local/Cellar
+          sudo mkdir -p /usr/local/{opt,share/man/man1,var/homebrew,Cellar,include,etc,lib}
+          sudo chown -R $(whoami) /usr/local
+          sudo chmod -R u+w /usr/local
           
           # Install Homebrew if not present
           if [ ! -f "/usr/local/bin/brew" ]; then
@@ -81,8 +81,6 @@ jobs:
             sudo mv homebrew/* /usr/local/Homebrew/
             sudo ln -sf /usr/local/Homebrew/bin/brew /usr/local/bin/brew
             sudo chown -R $(whoami) /usr/local/Homebrew
-            sudo mkdir -p /usr/local/var/homebrew/locks
-            sudo chown -R $(whoami) /usr/local/var/homebrew
           fi
           
           HOMEBREW_PREFIX="/usr/local"
