--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -150,13 +150,13 @@ jobs:
             -DCMAKE_FIND_FRAMEWORK=LAST \
             -DCMAKE_INSTALL_NAME_DIR=@executable_path/../lib \
             -DCMAKE_BUILD_WITH_INSTALL_NAME_DIR=ON \
-            -DCMAKE_LIBRARY_PATH="${BREW_PREFIX}/lib;${MBEDTLS_PREFIX}/lib;${ARGON2_PREFIX}/lib" \
-            -DCMAKE_INCLUDE_PATH="${BREW_PREFIX}/include;${MBEDTLS_PREFIX}/include;${ARGON2_PREFIX}/include" \
+            -DCMAKE_LIBRARY_PATH="${BREW_PREFIX}/lib" \
+            -DCMAKE_INCLUDE_PATH="${BREW_PREFIX}/include" \
             -DMBEDTLS_PREFIX="${MBEDTLS_PREFIX}" \
             -DARGON2_PREFIX="${ARGON2_PREFIX}" \
             -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch == 'arm64' && 'arm64' || 'x86_64' }} \
-            -DCMAKE_SHARED_LINKER_FLAGS="-L${MBEDTLS_PREFIX}/lib -L${ARGON2_PREFIX}/lib" \
-            -DCMAKE_EXE_LINKER_FLAGS="-L${MBEDTLS_PREFIX}/lib -L${ARGON2_PREFIX}/lib"
+            -DCMAKE_FIND_ROOT_PATH="${BREW_PREFIX}" \
+            -DCMAKE_FIND_ROOT_PATH_MODE_LIBRARY=ONLY
         else
           cmake -B build -DCMAKE_BUILD_TYPE=Release
         fi 
