--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
+            arch: x86_64
             dependencies: >
               build-essential
               libreadline-dev
@@ -22,15 +22,25 @@ jobs:
               libmbedtls-dev
               libargon2-dev
               pkg-config
+          - os: macos-13
+            arch: x86_64
+            dependencies: >
+              readline
+              openssl
+              mbedtls
+              argon2
           - os: macos-latest
+            arch: arm64
             dependencies: >
               readline
               openssl
               mbedtls
               argon2
           - os: windows-latest
+            arch: x86_64
             dependencies: >
               mingw-w64
+    
     steps:
     - uses: actions/checkout@v3
       with:
@@ -42,7 +52,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y ${{ matrix.dependencies }}
     - name: Install Dependencies (macOS)
-      if: matrix.os == 'macos-latest'
+      if: matrix.os == 'macos-13'
       run: |
         brew install readline openssl mbedtls argon2 pkg-config
         echo "MBEDTLS_PREFIX=$(brew --prefix mbedtls)" >> $GITHUB_ENV
@@ -76,20 +86,21 @@ jobs:
       run: |
         git config --global --add safe.directory '*'
     - name: Configure CMake (Unix)
-      if: matrix.os != 'windows-latest'
+      if: matrix.os != 'windows-latest' && matrix.os != 'macos-13'
       run: |
-        if [ "${{ matrix.os }}" = "macos-latest" ]; then
-          cmake -B build -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_PREFIX_PATH="$MBEDTLS_PREFIX;$ARGON2_PREFIX" \
-            -DOPENSSL_ROOT_DIR=$(brew --prefix openssl) \
-            -DCMAKE_FIND_FRAMEWORK=LAST \
-            -DCMAKE_INSTALL_NAME_DIR=@executable_path/../lib \
-            -DCMAKE_BUILD_WITH_INSTALL_NAME_DIR=ON \
-            -DCMAKE_LIBRARY_PATH="$(brew --prefix mbedtls)/lib;$(brew --prefix argon2)/lib" \
-            -DCMAKE_INCLUDE_PATH="$(brew --prefix mbedtls)/include;$(brew --prefix argon2)/include"
-        else
-          cmake -B build -DCMAKE_BUILD_TYPE=Release
-        fi 
+        cmake -B build -DCMAKE_BUILD_TYPE=Release
+    - name: Configure CMake (macOS)
+      if: matrix.os == 'macos-13'
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} \
+          -DCMAKE_PREFIX_PATH="$MBEDTLS_PREFIX;$ARGON2_PREFIX" \
+          -DOPENSSL_ROOT_DIR=$(brew --prefix openssl) \
+          -DCMAKE_FIND_FRAMEWORK=LAST \
+          -DCMAKE_INSTALL_NAME_DIR=@executable_path/../lib \
+          -DCMAKE_BUILD_WITH_INSTALL_NAME_DIR=ON \
+          -DCMAKE_LIBRARY_PATH="$(brew --prefix mbedtls)/lib;$(brew --prefix argon2)/lib" \
+          -DCMAKE_INCLUDE_PATH="$(brew --prefix mbedtls)/include;$(brew --prefix argon2)/include"
     - name: Configure CMake (Windows)
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
@@ -127,7 +138,7 @@ jobs:
     # Keep existing artifact upload
     - uses: actions/upload-artifact@v4
       with:
-        name: nosh-${{ matrix.os }}
+        name: nosh-${{ matrix.os }}-${{ matrix.arch }}
         path: |
           build/nosh
           build/nosh.exe
