--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,46 +52,87 @@ add_executable(nosh ${SOURCES})
 
 # Platform-specific settings
 if(WIN32)
-    target_link_libraries(nosh PRIVATE 
-        ws2_32          # For socket functions
-        iphlpapi        # For GetAdaptersInfo
-        bcrypt          # For BCryptGenRandom
-        pdcurses        # For terminal functions
-        crypt32         # For crypto functions
-        mbedtls
-        mbedcrypto 
-        mbedx509
-        argon2
+    # Windows-specific DLL handling
+    # Define base DLL names using wildcard patterns
+    set(REQUIRED_DLL_PATTERNS
+        "libmbedtls*.dll"
+        "libmbedcrypto*.dll"
+        "libmbedx509*.dll"
+        "libargon2*.dll"
+        "pdcurses.dll"
+        "libreadline*.dll"
+        "libgcc_s_seh*.dll"
+        "libwinpthread*.dll"
+        "libtermcap*.dll"
     )
-    
-    # Add Windows-specific compile definitions
+
+    # Multiple search paths for DLLs
+    set(DLL_SEARCH_PATHS
+        "${CMAKE_SOURCE_DIR}/dll"
+        "C:/msys64/mingw64/bin"
+        "C:/msys64/mingw64/lib"
+        "$ENV{PATH}"
+    )
+
+    # Remove old bin directory and create a clean one
+    add_custom_command(TARGET nosh PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E remove_directory "$<TARGET_FILE_DIR:nosh>/bin"
+        COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:nosh>/bin"
+        COMMENT "Creating clean bin directory"
+    )
+
+    # Copy nosh.exe to bin directory
+    add_custom_command(TARGET nosh POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+            "$<TARGET_FILE:nosh>"
+            "$<TARGET_FILE_DIR:nosh>/bin/nosh.exe"
+        COMMENT "Copying nosh.exe to bin directory"
+    )
+
+    # Find and copy DLLs using wildcard patterns
+    foreach(pattern ${REQUIRED_DLL_PATTERNS})
+        unset(DLL_MATCHES CACHE)
+        file(GLOB DLL_MATCHES
+            LIST_DIRECTORIES false
+            RELATIVE "${CMAKE_CURRENT_BINARY_DIR}"
+            ${DLL_SEARCH_PATHS}/${pattern}
+        )
+        
+        if(DLL_MATCHES)
+            # Take the first match for each pattern
+            list(GET DLL_MATCHES 0 DLL_PATH)
+            add_custom_command(TARGET nosh POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+                    "${DLL_PATH}" 
+                    "$<TARGET_FILE_DIR:nosh>/bin/"
+                COMMENT "Copying ${DLL_PATH} to bin directory"
+            )
+        else()
+            message(WARNING "Could not find any DLL matching pattern: ${pattern}")
+        endif()
+    endforeach()
+
+    # Windows-specific compiler definitions and libraries
     target_compile_definitions(nosh PRIVATE 
         _WIN32
         WIN32_LEAN_AND_MEAN
         _GNU_SOURCE
+        NO_PWD_H
     )
 
-    # Copy required DLLs to the output directory after build.
-    # This ensures that the DLL files (instead of being found dynamically) are placed alongside the executable.
-    # Assumes that the DLLs are located in the "dll" directory in the project root.
-    set(DLL_DIR "${CMAKE_SOURCE_DIR}/dll")
-    file(GLOB WIN_DLLS "${DLL_DIR}/*.dll")
-    foreach(dll ${WIN_DLLS})
-        add_custom_command(TARGET nosh POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${dll} $<TARGET_FILE_DIR:nosh>
-            COMMENT "Copying ${dll} to output directory"
-        )
-    endforeach()
+    # Add Windows-specific libraries
+    target_link_libraries(nosh PRIVATE
+        ws2_32    # Windows Sockets 2
+        iphlpapi  # IP Helper API
+    )
 
-    # TODO: Allow configuration of the DLL source directory via a CMake option for greater flexibility.
 elseif(APPLE)
+    # macOS-specific settings
     find_library(SECURITY_FRAMEWORK Security)
     find_library(CORE_FOUNDATION CoreFoundation)
-    
-    # Find Curses and Readline
     find_package(Curses REQUIRED)
     find_library(READLINE_LIBRARY readline)
-    
+
     # Get Homebrew prefix based on architecture
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         set(HOMEBREW_PREFIX "/usr/local")
@@ -147,6 +188,12 @@ else()
     pkg_check_modules(MBEDTLS REQUIRED mbedtls)
     pkg_check_modules(ARGON2 REQUIRED libargon2)
     
+    target_compile_definitions(nosh PRIVATE 
+        _POSIX_C_SOURCE=200809L
+        _DEFAULT_SOURCE
+        _GNU_SOURCE
+    )
+
     target_link_libraries(nosh PRIVATE
         OpenSSL::Crypto
         ${CURSES_LIBRARIES}
@@ -156,6 +203,91 @@ else()
         mbedx509
         argon2
     )
+endif()
+
+# After the platform-specific settings section:
+
+if(WIN32)
+    # Windows-specific DLL handling (additional set)
+    # Remove the old bin directory and create a clean one.
+    add_custom_command(TARGET nosh PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E remove_directory "$<TARGET_FILE_DIR:nosh>/bin"
+        COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:nosh>/bin"
+        COMMENT "Creating clean bin directory"
+    )
+
+    # Copy nosh.exe to bin directory after build
+    add_custom_command(TARGET nosh POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+            "$<TARGET_FILE:nosh>"
+            "$<TARGET_FILE_DIR:nosh>/bin/nosh.exe"
+        COMMENT "Copying nosh.exe to bin directory"
+    )
+
+    # Define required DLLs for additional dependencies
+    set(REQUIRED_DLLS
+        "libmbedcrypto-16.dll"
+        "libargon2.dll"
+        "libreadline8.dll"
+        "libgcc_s_seh-1.dll"
+        "libwinpthread-1.dll"
+        "libtermcap-0.dll"
+    )
+
+    # Multiple search paths for DLLs
+    set(DLL_SEARCH_PATHS
+        "${CMAKE_SOURCE_DIR}/dll"
+        "C:/msys64/mingw64/bin"
+        "C:/msys64/mingw64/lib"
+        "$ENV{PATH}"
+    )
+
+    # Copy each required DLL to bin directory
+    foreach(dll ${REQUIRED_DLLS})
+        unset(DLL_PATH CACHE)
+        find_file(DLL_PATH ${dll}
+            PATHS ${DLL_SEARCH_PATHS}
+            NO_DEFAULT_PATH
+        )
+        
+        if(DLL_PATH)
+            add_custom_command(TARGET nosh POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+                    "${DLL_PATH}" 
+                    "$<TARGET_FILE_DIR:nosh>/bin/${dll}"
+                COMMENT "Copying ${dll} to bin directory"
+            )
+        else()
+            message(WARNING "Could not find ${dll} in search paths")
+        endif()
+        unset(DLL_PATH CACHE)
+    endforeach()
+endif()
+
+# After the platform-specific settings
+
+if(WIN32)
+    target_compile_definitions(nosh PRIVATE 
+        _WIN32
+        WIN32_LEAN_AND_MEAN
+        _GNU_SOURCE
+        NO_PWD_H  # Add this to indicate pwd.h is not available
+    )
+else()
+    target_compile_definitions(nosh PRIVATE 
+        _POSIX_C_SOURCE=200809L
+        _DEFAULT_SOURCE
+        _GNU_SOURCE
+    )
+
+    # Check for required headers on Unix-like systems
+    include(CheckIncludeFile)
+    check_include_file(pwd.h HAVE_PWD_H)
+    check_include_file(unistd.h HAVE_UNISTD_H)
+    
+    if(NOT HAVE_PWD_H)
+        message(FATAL_ERROR "pwd.h not found - required for Unix-like systems")
+    endif()
 endif()
 
 # Handle Argon2 library path for macOS
@@ -168,7 +300,7 @@ if(APPLE)
     target_link_libraries(nosh PRIVATE "${ARGON2_PREFIX}/lib/libargon2.dylib")
 endif()
 
-# Add architecture-specific library paths
+# Add architecture-specific library paths for macOS
 if(APPLE)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         set(HOMEBREW_PREFIX "/usr/local")
@@ -185,7 +317,6 @@ if(APPLE)
             OUTPUT_STRIP_TRAILING_WHITESPACE
         )
         
-        # Add x86_64 specific paths
         include_directories(
             ${HOMEBREW_PREFIX}/include
             ${MBEDTLS_PREFIX}/include
@@ -198,7 +329,6 @@ if(APPLE)
             ${ARGON2_PREFIX}/lib
         )
         
-        # Remove duplicate target_link_libraries calls
         target_link_libraries(nosh PRIVATE
             ${SECURITY_FRAMEWORK}
             ${CORE_FOUNDATION}
@@ -227,7 +357,6 @@ if(APPLE)
             OUTPUT_STRIP_TRAILING_WHITESPACE
         )
         
-        # Add arm64 specific paths
         include_directories(
             ${HOMEBREW_PREFIX}/include
             ${MBEDTLS_PREFIX}/include
@@ -240,7 +369,6 @@ if(APPLE)
             ${ARGON2_PREFIX}/lib
         )
         
-        # Remove duplicate target_link_libraries calls
         target_link_libraries(nosh PRIVATE
             ${SECURITY_FRAMEWORK}
             ${CORE_FOUNDATION}
@@ -292,5 +420,12 @@ if(UNIX)
     # Create cmake_uninstall.cmake script
     file(WRITE ${CMAKE_BINARY_DIR}/cmake_uninstall.cmake "
     if(EXISTS \"/usr/local/bin/nosh\")
+        execute_process(COMMAND sudo rm /usr/local/bin/nosh)
+        if(EXISTS \$ENV{HOME}/.nosh_backup)
+            file(READ \$ENV{HOME}/.nosh_backup BACKUP_SHELL)
+            execute_process(COMMAND sudo chsh -s \${BACKUP_SHELL} \$USER)
+            file(REMOVE \$ENV{HOME}/.nosh_backup)
+        endif()
+    endif()
     ")
 endif()
